fix(Rain.Network): removes double iteration + removes stop on first find